[FEATURE] - Add checkboxes to the website, fix array issues,update websiteUI

--- a/website/index.html
+++ b/website/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>swift2equatable</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SwiftTools</title>
+  <link rel="icon" href="./icon/swift-tools-icon.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-    <div id="menu">
-        <button id="generate-button">Convert</button>
-    </div>
-    <div id="box">
-        <div id="firstbox">
-            <textarea name="input-Text" id="input-Text" cols="30" rows="10"></textarea>
-        </div>
-        <div id="secondbox">
-            <textarea name="output-Text" id="output-Text" cols="30" rows="10"></textarea>
-        </div>
-    </div>
-    <script src="bundle.js" ></script>
+  <header id="menu">
+    <div id="title">SwiftTools</div>
+    <nav id="nav-buttons">
+      <a class="nav-button" href="https://vinicius-caputo.github.io/xib2swift/">xib2swift</a>
+       <span class="nav-button active">swift2equatable</span>
+      <a class="nav-button" href="https://vinicius-caputo.github.io/swift2fixture/">swift2fixture</a>
+    </nav>
+  </header>
+
+  <section id="section-title">
+    swift2equatable
+  </section>
+  <section id="description">
+    A Swift tool that automatically generates code for struct and enum models to conform to the Equatable protocol.
+  </section>
+
+  <section id="options-section">
+    <label class="custom-checkbox">
+      <input type="checkbox" id="includeComments" />
+      <span class="checkmark"></span>
+      Include  <span class="swift-code-highlight">public</span> in declarations
+    </label>
+    <label class="custom-checkbox">
+      <input type="checkbox" id="useCustomComparison" />
+      <span class="checkmark"></span>
+      Include <span class="swift-code-highlight"> @retroactive</span> in declarations
+    </label>
+  </section>
+  
+  <main id="box">
+    <section class="codebox">
+      <textarea id="input-Text" placeholder="Paste your code here..."></textarea>
+    </section>
+    <section class="codebox">
+      <textarea id="output-Text" placeholder="Equatable conformance code will appear here..."></textarea>
+    </section>
+  </main>
+
+  <footer id="footer-message">
+    Enjoyed this project? Consider giving a ⭐ to this
+    <a href="https://github.com/vinicius-caputo/swift2equatable" target="_blank">GitHub repository</a>.
+  </footer>
+  
+  <script src="bundle.js"></script>
 </body>
 </html>
