[improvement] - add meta description

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta description="A tool to generate Equatable conformance code for Swift structs and enums." />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SwiftTools</title>
