[improvement] - add readme

--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta description="A tool to generate Equatable conformance code for Swift structs and enums." />
+  <meta name="description" content="A Swift tool that automatically generates code for struct and enum models to conform to the Equatable protocol.">
+  <meta name="keywords" content="Swift, Equatable, Code Generation, Structs, Enums, Swift Tools, swift2equatable">
+  <meta name="author" content="Vinicius Caputo">
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SwiftTools</title>
@@ -34,7 +37,7 @@
     <label class="custom-checkbox">
       <input type="checkbox" id="useCustomComparison" />
       <span class="checkmark"></span>
-      Include <span class="swift-code-highlight"> @retroactive</span> in declarations
+      Include <span class="swift-code-highlight">@retroactive</span> in declarations
     </label>
   </section>
   
@@ -51,7 +54,7 @@
     Enjoyed this project? Consider giving a ⭐ to this
     <a href="https://github.com/vinicius-caputo/swift2equatable" target="_blank">GitHub repository</a>.
   </footer>
-  
+
   <script src="bundle.js"></script>
 </body>
 </html>
